--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width" />
   <title>Warrior DPS Sim</title>
 
-  <link href="dist/css/theme.default.min.css" rel="stylesheet">
-  <link href="dist/css/style.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
+  <link href="dist/css/theme.default.min.css" rel="stylesheet" />
+  <link href="dist/css/style.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet" />
 
   <script type="text/javascript" src="dist/js/libs/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="dist/js/libs/jquery.tablesorter.min.js"></script>
@@ -46,7 +46,14 @@
   <script type="text/javascript" src="js/stats.js"></script>
   <script type="text/javascript" src="js/ui.js"></script>
 
-  <script>var whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false, "hide": { "ilvl": false } };</script>
+  <script>
+    var whTooltips = {
+      colorLinks: true,
+      iconizeLinks: false,
+      renameLinks: false,
+      hide: { ilvl: false },
+    };
+  </script>
   <script src="https://wow.zamimg.com/widgets/power.js"></script>
 </head>
 <!--
@@ -55,6 +62,7 @@ Log option
 profiles
   
 -->
+
 <body>
   <div class="alerts"></div>
 
@@ -63,6 +71,7 @@ profiles
     <div class="character">
       <p><span id="race">Human</span> Warrior</p>
       <p>Level 60</p>
+      <p id="currentprofilename"></p>
 
       <ul>
         <li>
@@ -120,20 +129,22 @@ profiles
       <a href="#" class="btn js-stats disabled">STATS</a>
       <a href="#" class="btn js-settings">SETTINGS</a>
     </div>
-    <div class="manual"><a href="https://docs.google.com/document/d/1-ugglMDHqIQlEDiE2z9G7zuI-kgyvb2kvgPobWbcxy0/edit" target="_blank">User Manual</a></div>
+    <div class="manual">
+      <a href="https://docs.google.com/document/d/1-ugglMDHqIQlEDiE2z9G7zuI-kgyvb2kvgPobWbcxy0/edit"
+        target="_blank">User Manual</a>
+    </div>
     <div class="author">made by Guybrush-Golemagg</div>
   </section>
 
   <section class="settings">
     <a href="#" class="btn-close"></a>
     <div class="wrapper">
-
       <article class="fight">
         <label>Settings</label>
         <ul>
           <li>
             <label>Level</label>
-            <input type="text" name="level" value="60" data-numberonly="true" readonly>
+            <input type="text" name="level" value="60" data-numberonly="true" readonly />
           </li>
           <li>
             <label>Race</label>
@@ -150,43 +161,43 @@ profiles
           </li>
           <li>
             <label>Simulations</label>
-            <input type="text" name="simulations" value="50000" data-numberonly="true">
+            <input type="text" name="simulations" value="50000" data-numberonly="true" />
           </li>
           <li>
             <label>Fight Duration (min)</label>
-            <input type="text" name="timesecsmin" value="50" data-numberonly="true">
+            <input type="text" name="timesecsmin" value="50" data-numberonly="true" />
           </li>
           <li>
             <label>Fight Duration (max)</label>
-            <input type="text" name="timesecsmax" value="60" data-numberonly="true">
+            <input type="text" name="timesecsmax" value="60" data-numberonly="true" />
           </li>
           <li>
             <label>Execute phase percentage</label>
-            <input type="text" name="executeperc" value="20" data-numberonly="true">
+            <input type="text" name="executeperc" value="20" data-numberonly="true" />
           </li>
           <li>
             <label>Initial Rage</label>
-            <input type="text" name="startrage" value="0" data-numberonly="true">
+            <input type="text" name="startrage" value="0" data-numberonly="true" />
           </li>
           <li>
             <label>Target Level</label>
-            <input type="text" name="targetlevel" value="63" data-numberonly="true" readonly>
+            <input type="text" name="targetlevel" value="63" data-numberonly="true" readonly />
           </li>
           <li>
             <label>Target Resistance</label>
-            <input type="text" name="targetresistance" value="24" data-numberonly="true">
+            <input type="text" name="targetresistance" value="24" data-numberonly="true" />
           </li>
-          <li style="display: none;">
+          <li style="display: none">
             <label>Adjacent Targets</label>
-            <input type="text" name="adjacent" value="0" data-numberonly="true">
+            <input type="text" name="adjacent" value="0" data-numberonly="true" />
           </li>
-          <li style="display: none;">
+          <li style="display: none">
             <label>Adjacent Targets Level</label>
-            <input type="text" name="adjacentlevel" value="60" data-numberonly="true">
+            <input type="text" name="adjacentlevel" value="60" data-numberonly="true" />
           </li>
           <li>
             <label>Target Armor</label>
-            <input type="text" name="targetarmor" value="336" data-numberonly="true">
+            <input type="text" name="targetarmor" value="336" data-numberonly="true" />
           </li>
           <li>
             <label>AQ Books</label>
@@ -204,7 +215,7 @@ profiles
           </li>
           <li>
             <label>Spell Damage</label>
-            <input type="text" name="spelldamage" value="0" data-numberonly="true">
+            <input type="text" name="spelldamage" value="0" data-numberonly="true" />
           </li>
         </ul>
       </article>
@@ -251,19 +262,34 @@ profiles
       <article class="profiles">
         <label>Profiles</label>
         <ul>
-          <li><input type="text" value="Profile 1" readonly /> <a href="#" class="js-delprofile">del</a></li>
-          <li><input type="text" value="Orc Warrior" readonly /> <a href="#" class="js-delprofile">del</a></li>
+          <li>
+            <label>Existing Profiles</label>  
+            <ul id="profilelist" class="list js-profilelist">
+            </ul>
+          </li>
+          <li>
+            <label>Save Profile</label>
+            <input type="text" id="saveprofilename" placeholder="Profile Name" />
+            <a href="#" class="btn js-saveprofile">Save</a>
+          </li>
+          <li>
+            <label>Load Profile</label>
+            <input type="text" id="loadprofilename" placeholder="Profile Name" />
+            <a href="#" class="btn js-loadprofile">Load</a>
+          </li>
+          <li>
+            <label>Delete Profile</label>
+            <input type="text" id="delprofilename" placeholder="Profile Name" />
+            <a href="#" class="btn js-delprofile">Delete</a>
+          </li>
         </ul>
-        <a href="#" class="btn js-newprofile">New Profile</a>
       </article>
-
     </div>
   </section>
 
   <section class="stats">
     <a href="#" class="btn-close"></a>
     <div class="wrapper">
-
       <article>
         <label>Fight Details</label>
         <div class="container-table"></div>
@@ -284,7 +310,6 @@ profiles
         <label>DPS Spread</label>
         <div class="container-spread"><canvas></canvas></div>
       </article>
-
     </div>
   </section>
 
@@ -294,56 +319,132 @@ profiles
         <li data-type="mainhand" class="active">
           <p>Main Hand</p>
           <ul class="filter">
-            <li class="active"><p>All</p></li>
-            <li><p>Axe</p></li>
-            <li><p>Dagger</p></li>
-            <li><p>Fist</p></li>
-            <li><p>Mace</p></li>
-            <li><p>Sword</p></li>
-            <li><p>Mace & Sword</p></li>
-            <li><p>Axe, Dagger & Sword</p></li>
+            <li class="active">
+              <p>All</p>
+            </li>
+            <li>
+              <p>Axe</p>
+            </li>
+            <li>
+              <p>Dagger</p>
+            </li>
+            <li>
+              <p>Fist</p>
+            </li>
+            <li>
+              <p>Mace</p>
+            </li>
+            <li>
+              <p>Sword</p>
+            </li>
+            <li>
+              <p>Mace & Sword</p>
+            </li>
+            <li>
+              <p>Axe, Dagger & Sword</p>
+            </li>
           </ul>
         </li>
         <li data-type="offhand">
           <p>Off Hand</p>
           <ul class="filter">
-            <li class="active"><p>All</p></li>
-            <li><p>Axe</p></li>
-            <li><p>Dagger</p></li>
-            <li><p>Fist</p></li>
-            <li><p>Mace</p></li>
-            <li><p>Sword</p></li>
-            <li><p>Mace & Sword</p></li>
-            <li><p>Axe, Dagger & Sword</p></li>
+            <li class="active">
+              <p>All</p>
+            </li>
+            <li>
+              <p>Axe</p>
+            </li>
+            <li>
+              <p>Dagger</p>
+            </li>
+            <li>
+              <p>Fist</p>
+            </li>
+            <li>
+              <p>Mace</p>
+            </li>
+            <li>
+              <p>Sword</p>
+            </li>
+            <li>
+              <p>Mace & Sword</p>
+            </li>
+            <li>
+              <p>Axe, Dagger & Sword</p>
+            </li>
           </ul>
         </li>
         <li data-type="twohand">
           <p>Two Hand</p>
           <ul class="filter">
-            <li class="active"><p>All</p></li>
-            <li><p>Axe</p></li>
-            <li><p>Mace</p></li>
-            <li><p>Polearm</p></li>
-            <li><p>Sword</p></li>
-            <li><p>Mace & Sword</p></li>
+            <li class="active">
+              <p>All</p>
+            </li>
+            <li>
+              <p>Axe</p>
+            </li>
+            <li>
+              <p>Mace</p>
+            </li>
+            <li>
+              <p>Polearm</p>
+            </li>
+            <li>
+              <p>Sword</p>
+            </li>
+            <li>
+              <p>Mace & Sword</p>
+            </li>
           </ul>
         </li>
-        <li data-type="head"><p>Head</p></li>
-        <li data-type="neck"><p>Neck</p></li>
-        <li data-type="shoulder"><p>Shoulder</p></li>
-        <li data-type="back"><p>Back</p></li>
-        <li data-type="chest"><p>Chest</p></li>
-        <li data-type="wrist"><p>Wrist</p></li>
-        <li data-type="hands"><p>Hands</p></li>
-        <li data-type="waist"><p>Waist</p></li>
-        <li data-type="legs"><p>Legs</p></li>
-        <li data-type="feet"><p>Feet</p></li>
-        <li data-type="finger1"><p>Ring 1</p></li>
-        <li data-type="finger2"><p>Ring 2</p></li>
-        <li data-type="trinket1"><p>Trinket 1</p></li>
-        <li data-type="trinket2"><p>Trinket 2</p></li>
-        <li data-type="ranged"><p>Ranged</p></li>
-        <li data-type="custom"><p>Custom</p></li>
+        <li data-type="head">
+          <p>Head</p>
+        </li>
+        <li data-type="neck">
+          <p>Neck</p>
+        </li>
+        <li data-type="shoulder">
+          <p>Shoulder</p>
+        </li>
+        <li data-type="back">
+          <p>Back</p>
+        </li>
+        <li data-type="chest">
+          <p>Chest</p>
+        </li>
+        <li data-type="wrist">
+          <p>Wrist</p>
+        </li>
+        <li data-type="hands">
+          <p>Hands</p>
+        </li>
+        <li data-type="waist">
+          <p>Waist</p>
+        </li>
+        <li data-type="legs">
+          <p>Legs</p>
+        </li>
+        <li data-type="feet">
+          <p>Feet</p>
+        </li>
+        <li data-type="finger1">
+          <p>Ring 1</p>
+        </li>
+        <li data-type="finger2">
+          <p>Ring 2</p>
+        </li>
+        <li data-type="trinket1">
+          <p>Trinket 1</p>
+        </li>
+        <li data-type="trinket2">
+          <p>Trinket 2</p>
+        </li>
+        <li data-type="ranged">
+          <p>Ranged</p>
+        </li>
+        <li data-type="custom">
+          <p>Custom</p>
+        </li>
       </ul>
     </nav>
 
@@ -353,10 +454,9 @@ profiles
       <a href="#" class="btn js-enchant">ENCHANTS DPS</a>
       <a href="#" class="btn js-table">GEAR DPS</a>
     </div>
-    
+
     <progress value="0" max="100"></progress>
   </section>
-
 
   <script>
     $(document).ready(function () {
@@ -365,7 +465,6 @@ profiles
       SIM.STATS.init();
     });
   </script>
-
 </body>
 
 </html>
